load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("//cmd:wrapper.bzl", "wrap")

wrap(
    name = "golangci-lint",
    file = "@golangci-lint",
)

container_image(
    name = "image",
    args = [
        "run",
    ],
    base = "@cc_image_base//image",
    entrypoint = ["/golangci-lint"],
    files = ["@golangci-lint"],
    layers = ["//lang/go:layer"],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "whilp/golangci-lint",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":image",
)
