load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("//cmd:wrapper.bzl", "wrap")

FILE = "@golangcilint//:golangci-lint"

ARGS = [
    "run",
    "--fix",
]

wrap(
    name = "golangci-lint",
    args = ARGS,
    file = FILE,
)

container_image(
    name = "image",
    args = ARGS + ["./..."],
    base = "@cc_image_base//image",
    entrypoint = ["/golangci-lint"],
    files = [FILE],
    layers = ["//lang/go:layer"],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "whilp/golangci-lint",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":image",
)
