load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

nodejs_image(
    name = "prettier",
    args = [
        "--check",
        "--write",
        ".",
    ],
    data = [
        "@npm//prettier",
    ],
    entry_point = "@npm//:node_modules/prettier/bin-prettier.js",
)

container_push(
    name = "push",
    format = "Docker",
    image = ":prettier",
    registry = "index.docker.io",
    repository = "whilp/prettier",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":prettier",
)
