load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

ARGS = [
    "--check",
    "--write",
]

DATA = [
    "@npm//prettier",
]

ENTRY_POINT = "@npm//:node_modules/prettier/bin-prettier.js"

nodejs_binary(
    name = "prettier",
    args = ARGS,
    data = DATA,
    entry_point = ENTRY_POINT,
)

nodejs_image(
    name = "image",
    args = ARGS + ["."],
    data = DATA,
    entry_point = ENTRY_POINT,
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "whilp/prettier",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":image",
)
