load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//cmd:labels.bzl", "labels")

ARGS = []

DATA = [
    "@npm//pyright",
    "//:pyrightconfig.json",
]

ENTRY_POINT = "@npm//:node_modules/pyright/dist/pyright.js"

nodejs_binary(
    name = "pyright",
    args = ARGS,
    data = DATA,
    entry_point = ENTRY_POINT,
)

nodejs_image(
    name = "image",
    args = ARGS + [
        "-p",
        "pyrightconfig.json",
        "-t",
        "/app/cmd/pyright/image.binary.runfiles/world/external/npm/node_modules/pyright/dist/typeshed-fallback",
        ".",
    ],
    base = ":base",
    data = DATA,
    entry_point = ENTRY_POINT,
)

container_image(
    name = "base",
    base = "@nodejs_image_base//image",
    labels = labels({"org.opencontainers.image.description": "pyright checker"}),
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "ghcr.io",
    repository = "whilp/pyright",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":image",
)
