load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("//cmd:labels.bzl", "labels")

go_image(
    name = "renovate",
    args = [
        "docker-entrypoint.sh",
        "renovate",
    ],
    base = ":base",
    binary = "//cmd/gh:gh",
    visibility = ["//visibility:public"],
)

container_image(
    name = "base",
    base = "@renovate//image",
    env = {
        "COMMAND": "wrap",
        "WRAP_TOKEN_NAME": "RENOVATE_TOKEN",
        # https://github.com/renovatebot/renovate/blob/a2b267137005458eca16a39482da458e2ee4e819/lib/util/http/auth.ts#L20
        "WRAP_TOKEN_PREFIX": "x-access-token:",
        "APP_ID": "",
        "APP_KEY": "",
        "GITHUB_TOKEN": "",
        "GITHUB_REPOSITORY": "",
    },
    labels = labels({"org.opencontainers.image.description": "renovate/renovate with support for GitHub App auth"}),
)

container_push(
    name = "push",
    format = "Docker",
    image = ":renovate",
    registry = "ghcr.io",
    repository = "whilp/renovate",
    tag = "latest",
)

container_test(
    name = "test",
    size = "large",
    configs = ["test.json"],
    image = ":renovate",
)
