load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("//cmd:wrapper.bzl", "wrap")
load("//cmd:labels.bzl", "labels")

FILE = "@shfmt//file"

ARGS = [
    "-l",
    "-w",
    "-s",
    "-i",
    "2",
]

wrap(
    name = "shfmt",
    args = ARGS,
    file = FILE,
)

container_image(
    name = "image",
    args = ARGS + ["."],
    base = "@cc_image_base//image",
    entrypoint = ["/shfmt"],
    files = [FILE],
    labels = labels({"org.opencontainers.image.description": "shfmt linter"}),
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "ghcr.io",
    repository = "whilp/shfmt",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":image",
)
