load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@pypi//:requirements.bzl", "requirement")

py3_image(
    name = "black",
    srcs = ["black.py"],
    args = [
        "-v",
        "-l120",
        ".",
    ],
    main = "black.py",
    deps = [
        requirement("black"),
        requirement("regex"),
        requirement("appdirs"),
        requirement("attrs"),
        requirement("click"),
        requirement("toml"),
        requirement("typed-ast"),
        requirement("pathspec"),
    ],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":black",
    registry = "index.docker.io",
    repository = "whilp/black",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":black",
)
