load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push", "container_layer")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")
#load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")

container_push(
   name = "latest",
   image = ":buildifier",
   format = "Docker",
   registry = "index.docker.io",
   repository = "whilp/buildifier",
   tag = "latest",
)

container_push(
   name = "next",
   image = ":buildifier",
   format = "Docker",
   registry = "index.docker.io",
   repository = "whilp/buildifier",
   tag = "next",
)

container_image(
  name = "buildifier",
  base = "@cc_image_base//image",
  files = ["@buildifier//file"],
  mode = "0o555",
  entrypoint = ["/buildifier"],
  empty_dirs = [
    "/work",
  ],
  workdir = "/work",
  volumes = [
    "/work",
  ],
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":buildifier",
)
