load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")

container_push(
    name = "latest",
    format = "Docker",
    image = ":buildifier",
    registry = "index.docker.io",
    repository = "whilp/buildifier",
    tag = "latest",
)

container_push(
    name = "next",
    format = "Docker",
    image = ":buildifier",
    registry = "index.docker.io",
    repository = "whilp/buildifier",
    tag = "next",
)

container_image(
    name = "buildifier",
    base = "@cc_image_base//image",
    empty_dirs = [
        "/work",
    ],
    entrypoint = ["/buildifier"],
    files = ["@buildifier//file"],
    mode = "0o555",
    volumes = [
        "/work",
    ],
    workdir = "/work",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":buildifier",
)
